# 3D_renderer

./: CMakeLists.txt  README.md  cameraPlanes.hpp  directives.hpp  externs.hpp  main.cpp  main.hpp  structs.hpp
cameraPlanes/: CMakeLists.txt  cameraPlanes.cpp  cameraPlanes.hpp
debugger/: CMakeLists.txt  debugger.cpp  debugger.hpp
hwacp/: hwaCrossProducts.cu  hwaCrossProducts.hpp
objLoader/: CMakeLists.txt  objLoader.cpp  objLoader.hpp
transformer/: CMakeLists.txt  transformer.cpp  transformer.hpp
triangleClipper/: CMakeLists.txt  triangleClipper.cpp  triangleClipper.hpp
triangleRenderer/: CMakeLists.txt  triangleRenderer.cpp  triangleRenderer.hpp
